2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	More send_error
	None of these are exercised by the test suite...
	* src/ucommand.hh (send_error): Now exported.
	* src/ucommand.cc: Adjust.
	* src/uvariablename.cc: Use it.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	UVariableName::UDeriveType
	* src/utypes.hh (UDeriveType): Move to...
	* src/uvariablename.hh: here.
	Adjust all uses.
	* src/parser/bison/ugrammar.y (TOK_NORM): Use the same
	string in the parser as it is in the scanner.
	Use more string reprensentation for symbols.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Display the expression locations in errors
	* src/uexpression.hh, src/uexpression.cc (eval_LIST, eval_GROUP):
	New, extracted from...
	(eval): here.
	(send_error): New.
	Use it instead of snprintf + send dark incantations.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Put UDefType in its class
	* src/utypes.hh (UDefType): Move to...
	* src/ucommand.hh (UCommand_DEF::UDefType): here.
	Adjust all uses.
	* src/uvariablename.hh (id_type): Remove, unused.
	Adjust all "uses" (that were useless).

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Attach locations to UExpressions
	* src/uexpression.hh, src/uexpression.cc (UExpression): Derive
	from UAst.
	Adjust all uses.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Remove useless prefix
	* src/ucommand.hh: No need to specify UCommand:: where we're in it.
	Besides, it actually comes from UAst.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Fix location tracking
	When load is executed, we must preserve the current location.
	* src/parser/uparser.cc (UParser::process_): When loading a file
	backup the current location and restore it to keep track of
	the location in the input.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	Add location to command errors
	* src/uast.hh (loc): New.
	* src/ucommand.cc (send_error): Also report the location of
	the broken command.
