@@ -1,5 +1,6 @@
 /// \file ucomplaints.cc
 
+#include <cstdlib>
 #include "ucomplaints.hh"
 
 const char*
@@ -26,8 +27,7 @@ message (UErrorCode n)
     case UERROR_MEMORY_WARNING:
       return "!!! Memory warning\n";
   }
-  // This should not be possible.
-  return "!!! Unidentified Error\n";
+  abort ();
 }
 
 const char*
@@ -38,6 +38,5 @@ message (UWarningCode n)
     case UWARNING_MEMORY:
       return "!!! Memory overflow warning\n";
   }
-  // This should not be possible.
-  return "!!! Unidentified warning\n";
+  abort ();
 }
